# LLVM-Code-Generation

./: .clangd  README.md
ch3/llvm_ir/: CMakeLists.txt
ch3/llvm_ir/your_turn/: populate_function.cpp
ch3/machineir/your_turn/: populate_function.cpp
ch4/: README.md
ch4/sccppass/: CMakeLists.txt  ConstProp.cpp  build.sh  constprop-test.ll  run.sh  sample.c
ch4/sccppass/tests/Inputs/: sample.ll
ch5/my_first_pass/: CMakeLists.txt  HelloPass.cpp  MyFirstPass.cpp  README.md  run.sh  test.ll
ch5/my_first_pass_n_first_pipeline/: CMakeLists.txt  MyFirstPass.cpp  MyFirstPass.h  README.md  RunPipeline.cpp  run.sh
ch5/your_first_pass/your_turn/: passWithLegacyPM.cpp  passWithNewPM.cpp  passWithNewPM.h
ch5/your_first_pipeline/your_turn/: passPipelineWithNewPM.cpp
ch6/: README.md  hello.td  low_level.td  multiclass.td  test2.td
ch6/generate_my_tablegen_hello/: CMakeLists.txt  README.md
ch6/generate_my_tablegen_hello/src/: main.cpp
ch6/generate_my_tablegen_hello/tablegen/: Hello.td
ch7/: endianness.ll  hadd_vector.ll  impact_of_abi.ll
